exports[`consistent-assert > invalid(1): import assert from 'assert';\nassert(foo) 1`] = `

  1 | import assert from 'assert';
  2 | assert(foo)

`;

exports[`consistent-assert > invalid(1): import assert from 'assert';\nassert(foo) 2`] = `

Message:
  1 | import assert from 'assert';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'assert';
  2 | assert.ok(foo)

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 1`] = `

   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 10`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
> 13 | i(foo);
     | ^ Prefer \`i.ok(…)\` over \`i(…)\`.
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i.ok(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 11`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
> 14 | j(foo);
     | ^ Prefer \`j.ok(…)\` over \`j(…)\`.

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j.ok(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 2`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
>  5 | a(foo);
     | ^ Prefer \`a.ok(…)\` over \`a(…)\`.
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a.ok(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 3`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
>  6 | b(foo);
     | ^ Prefer \`b.ok(…)\` over \`b(…)\`.
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b.ok(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 4`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
>  7 | c(foo);
     | ^ Prefer \`c.ok(…)\` over \`c(…)\`.
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c.ok(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 5`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
>  8 | d(foo);
     | ^ Prefer \`d.ok(…)\` over \`d(…)\`.
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d.ok(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 6`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
>  9 | e(foo);
     | ^ Prefer \`e.ok(…)\` over \`e(…)\`.
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e.ok(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 7`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
> 10 | f(foo);
     | ^ Prefer \`f.ok(…)\` over \`f(…)\`.
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f.ok(foo);
  11 | g(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 8`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
> 11 | g(foo);
     | ^ Prefer \`g.ok(…)\` over \`g(…)\`.
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g.ok(foo);
  12 | h(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(10): import a, {strict as b, default as c} from 'node:assert';\nimport d, {strict as e, default as f} from 'assert';\nimport g, {default as h} from 'node:assert/strict';\nimport i, {default as j} from 'assert/strict';\na(foo);\nb(foo);\nc(foo);\nd(foo);\ne(foo);\nf(foo);\ng(foo);\nh(foo);\ni(foo);\nj(foo); 9`] = `

Message:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
> 12 | h(foo);
     | ^ Prefer \`h.ok(…)\` over \`h(…)\`.
  13 | i(foo);
  14 | j(foo);

Output:
   1 | import a, {strict as b, default as c} from 'node:assert';
   2 | import d, {strict as e, default as f} from 'assert';
   3 | import g, {default as h} from 'node:assert/strict';
   4 | import i, {default as j} from 'assert/strict';
   5 | a(foo);
   6 | b(foo);
   7 | c(foo);
   8 | d(foo);
   9 | e(foo);
  10 | f(foo);
  11 | g(foo);
  12 | h.ok(foo);
  13 | i(foo);
  14 | j(foo);

`;

exports[`consistent-assert > invalid(11): import assert from 'node:assert';\nassert?.(foo) 1`] = `

  1 | import assert from 'node:assert';
  2 | assert?.(foo)

`;

exports[`consistent-assert > invalid(11): import assert from 'node:assert';\nassert?.(foo) 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert?.(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok?.(foo)

`;

exports[`consistent-assert > invalid(12): import assert from 'assert';\n\n((\n\t/* comment */ ((\n\t\t/* comment */\n\t\tassert\n\t\t/* comment */\n\t\t)) /* comment */\n\t\t(/* comment */ typeof foo === 'string', 'foo must be a string' /** after comment */)\n)); 1`] = `

   1 | import assert from 'assert';
   2 |
   3 | ((
   4 | 	/* comment */ ((
   5 | 		/* comment */
   6 | 		assert
   7 | 		/* comment */
   8 | 		)) /* comment */
   9 | 		(/* comment */ typeof foo === 'string', 'foo must be a string' /** after comment */)
  10 | ));

`;

exports[`consistent-assert > invalid(12): import assert from 'assert';\n\n((\n\t/* comment */ ((\n\t\t/* comment */\n\t\tassert\n\t\t/* comment */\n\t\t)) /* comment */\n\t\t(/* comment */ typeof foo === 'string', 'foo must be a string' /** after comment */)\n)); 2`] = `

Message:
   1 | import assert from 'assert';
   2 |
   3 | ((
   4 | 	/* comment */ ((
   5 | 		/* comment */
>  6 | 		assert
     | 		^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.
   7 | 		/* comment */
   8 | 		)) /* comment */
   9 | 		(/* comment */ typeof foo === 'string', 'foo must be a string' /** after comment */)
  10 | ));

Output:
   1 | import assert from 'assert';
   2 |
   3 | ((
   4 | 	/* comment */ ((
   5 | 		/* comment */
   6 | 		assert.ok
   7 | 		/* comment */
   8 | 		)) /* comment */
   9 | 		(/* comment */ typeof foo === 'string', 'foo must be a string' /** after comment */)
  10 | ));

`;

exports[`consistent-assert > invalid(2): import assert from 'node:assert';\nassert(foo) 1`] = `

  1 | import assert from 'node:assert';
  2 | assert(foo)

`;

exports[`consistent-assert > invalid(2): import assert from 'node:assert';\nassert(foo) 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok(foo)

`;

exports[`consistent-assert > invalid(3): import assert from 'assert/strict';\nassert(foo) 1`] = `

  1 | import assert from 'assert/strict';
  2 | assert(foo)

`;

exports[`consistent-assert > invalid(3): import assert from 'assert/strict';\nassert(foo) 2`] = `

Message:
  1 | import assert from 'assert/strict';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'assert/strict';
  2 | assert.ok(foo)

`;

exports[`consistent-assert > invalid(4): import assert from 'node:assert/strict';\nassert(foo) 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert(foo)

`;

exports[`consistent-assert > invalid(4): import assert from 'node:assert/strict';\nassert(foo) 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert.ok(foo)

`;

exports[`consistent-assert > invalid(5): import customAssert from 'assert';\ncustomAssert(foo) 1`] = `

  1 | import customAssert from 'assert';
  2 | customAssert(foo)

`;

exports[`consistent-assert > invalid(5): import customAssert from 'assert';\ncustomAssert(foo) 2`] = `

Message:
  1 | import customAssert from 'assert';
> 2 | customAssert(foo)
    | ^^^^^^^^^^^^ Prefer \`customAssert.ok(…)\` over \`customAssert(…)\`.

Output:
  1 | import customAssert from 'assert';
  2 | customAssert.ok(foo)

`;

exports[`consistent-assert > invalid(6): import customAssert from 'node:assert';\ncustomAssert(foo) 1`] = `

  1 | import customAssert from 'node:assert';
  2 | customAssert(foo)

`;

exports[`consistent-assert > invalid(6): import customAssert from 'node:assert';\ncustomAssert(foo) 2`] = `

Message:
  1 | import customAssert from 'node:assert';
> 2 | customAssert(foo)
    | ^^^^^^^^^^^^ Prefer \`customAssert.ok(…)\` over \`customAssert(…)\`.

Output:
  1 | import customAssert from 'node:assert';
  2 | customAssert.ok(foo)

`;

exports[`consistent-assert > invalid(7): import assert from 'assert';\nassert(foo)\nassert(bar)\nassert(baz) 1`] = `

  1 | import assert from 'assert';
  2 | assert(foo)
  3 | assert(bar)
  4 | assert(baz)

`;

exports[`consistent-assert > invalid(7): import assert from 'assert';\nassert(foo)\nassert(bar)\nassert(baz) 2`] = `

Message:
  1 | import assert from 'assert';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.
  3 | assert(bar)
  4 | assert(baz)

Output:
  1 | import assert from 'assert';
  2 | assert.ok(foo)
  3 | assert(bar)
  4 | assert(baz)

`;

exports[`consistent-assert > invalid(7): import assert from 'assert';\nassert(foo)\nassert(bar)\nassert(baz) 3`] = `

Message:
  1 | import assert from 'assert';
  2 | assert(foo)
> 3 | assert(bar)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.
  4 | assert(baz)

Output:
  1 | import assert from 'assert';
  2 | assert(foo)
  3 | assert.ok(bar)
  4 | assert(baz)

`;

exports[`consistent-assert > invalid(7): import assert from 'assert';\nassert(foo)\nassert(bar)\nassert(baz) 4`] = `

Message:
  1 | import assert from 'assert';
  2 | assert(foo)
  3 | assert(bar)
> 4 | assert(baz)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'assert';
  2 | assert(foo)
  3 | assert(bar)
  4 | assert.ok(baz)

`;

exports[`consistent-assert > invalid(8): import {strict} from 'assert';\nstrict(foo) 1`] = `

  1 | import {strict} from 'assert';
  2 | strict(foo)

`;

exports[`consistent-assert > invalid(8): import {strict} from 'assert';\nstrict(foo) 2`] = `

Message:
  1 | import {strict} from 'assert';
> 2 | strict(foo)
    | ^^^^^^ Prefer \`strict.ok(…)\` over \`strict(…)\`.

Output:
  1 | import {strict} from 'assert';
  2 | strict.ok(foo)

`;

exports[`consistent-assert > invalid(9): import {strict as assert} from 'assert';\nassert(foo) 1`] = `

  1 | import {strict as assert} from 'assert';
  2 | assert(foo)

`;

exports[`consistent-assert > invalid(9): import {strict as assert} from 'assert';\nassert(foo) 2`] = `

Message:
  1 | import {strict as assert} from 'assert';
> 2 | assert(foo)
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {strict as assert} from 'assert';
  2 | assert.ok(foo)

`;
